# bach

./: Cargo.toml  Jenkinsfile  README.md
.circleci/: config.yml
bach-bus/: 7  Cargo.toml  README.md
bach-bus/src/: bus.rs  lib.rs  packet.rs  queue.rs
bach-module/: Cargo.toml  LICENSE
bach-module-tests/: Cargo.toml
bach-module-tests/src/: lib.rs
bach-module/src/: lib.rs
bach-sync/: Cargo.toml
bach-sync/src/: deltasync.rs  error.rs  lib.rs  loggers.rs  scriptrunner.rs  synchrotrait.rs  task.rs  taskrunner.rs  threadmessage.rs  utils.rs
bach-sync/src/deltasync/: fssync.rs  sshsync.rs
bach-sync/src/loggers/: fslogger.rs
bach-sync/src/net/: host.rs
bachd/: <  Cargo.toml
bachd/src/: daemon.rs  lib.rs  main.rs  modulemanager.rs  modulemanagerconfig.rs  staticmodmatcher.rs  tcpmessages.rs
bacsh/: Cargo.toml
bacsh/src/: main.rs
bacsh/translations/: en.json  fr.json
config-examples/: bachd.conf.xml  bachd.rsync.xml  bachd.static.xml  rsync.example.xml
misc/init.d/: bachd
modules/dummy/: Cargo.toml  dummyout.txt
modules/dummy/src/: lib.rs
modules/noreply-select/: Cargo.toml  noreply.example.xml
modules/noreply-select/examples/: config.rs
modules/noreply-select/src/: lib.rs
modules/reporter/: Cargo.toml  reporter.example.xml
modules/reporter/examples/: genconfig.rs  mailcmd.rs
modules/reporter/src/: lib.rs  mailtemplate.rs  reporterconfig.rs
modules/rsync/: <  Cargo.toml  example.config.1.xml  example.config.2.xml  example.config.3.xml  example.config.4.xml  example.config.5.xml  example.config.6.xml  example.config.7.xml  post-check.1.py  post-check.2.py  post-check.3.py  post-check.4.py  post-check.5.py  post-check.6.py  post-check.7.py  tomoveaftergood.xml
modules/rsync/examples/: config.rs  config_to_cmd.rs  fire_config_6.rs
modules/rsync/src/: host.rs  lib.rs  rsynconfig.rs
modules/stdlogger/: Cargo.toml
modules/stdlogger/src/: lib.rs
testing-data/: gen_random_fs.py
testing-data/dummy-dat/50697178/20828526/58506750/: 18499759
testing-data/dummy-dat/50697178/20828526/99952911/: 15026608  53777895
testing-data/dummy-dat/50697178/26201040/: 52039415  99861608
testing-data/dummy-dat/50697178/26201040/16326127/: 59430805
testing-data/dummy-dat/50697178/26201040/18875094/: 17590639  86214902
testing-data/dummy-dat/50697178/26201040/39551627/: 91851253
testing-data/dummy-dat/50697178/54535765/12884413/: 39850292  41600274  98444770
testing-data/dummy-dat/68532921/: 65877702  77671254
testing-data/dummy-dat/68532921/76541952/: 90414221
testing-data/dummy-dat/68532921/88086714/: 56786546
testing-data/dummy-dat/80021058/56229980/: 19494176  27068912
testing-data/dummy-dat/80704313/: 18381103  26321493  73888997
testing-data/dummy-dat/80704313/25175198/: 29714473
testing-data/dummy-dat2/10638389/22726040/: 74958730
testing-data/dummy-dat2/10638389/38084084/: 68621420
testing-data/dummy-dat2/10638389/47495911/: 32339463  44307350  61560066  70339430  71648658
testing-data/dummy-dat2/10638389/71427395/: 13400781  53566431  67654974
testing-data/dummy-dat2/10638389/98075102/: 12663011  14247494  58405328
testing-data/dummy-dat2/12087273/: 46515456  52338958  68447670
testing-data/dummy-dat2/12087273/43513890/: 14608306  57518106
testing-data/dummy-dat2/12087273/69532450/: 70799536
testing-data/dummy-dat2/76780371/10753111/: 43395531
testing-data/dummy-dat2/76780371/44607333/: 10844688  11463026
testing-data/dummy-dat2/76780371/48341187/: 45078485
testing-data/dummy-dat2/76780371/52066218/: 25945961  36640872  59066313
testing-data/dummy-dat2/76780371/54645496/: 40063558  68029890
testing-data/dummy-dat2/82619702/: 11314882  14948587  21575382  56709014
testing-data/dummy-dat2/82619702/59057739/: 28034880  76781497  90541707
testing-data/dummy-dat2/84867009/: 11591456  50900442
testing-data/dummy-dat2/84867009/12189558/: 51289741  61116475
testing-data/dummy-dat2/84867009/31869586/: 73562408  79062217  89190850
testing-data/dummy-dat2/84867009/67401015/: 85463663
testing-data/dummy-dat3/: 37741271
testing-data/dummy-dat3/50697178/: 64365641
testing-data/dummy-dat3/50697178/20828526/: 26773155  80168633
testing-data/dummy-dat3/50697178/73773769/: 12205382  14690285
testing-data/dummy-dat3/68532921/: 57711806
testing-data/dummy-dat3/68532921/76541952/: 46559911  47989106
testing-data/dummy-dat3/68532921/88086714/: 29808636  32877434
testing-data/dummy-dat3/80021058/: 53102272  57190839
testing-data/dummy-dat3/80021058/56229980/: 31936706  68484689
testing-data/dummy-dat3/80021058/80057186/: 94159028
testing-data/dummy-dat3/80021058/85129484/: 58519620  84212611
testing-data/dummy-dat3/80704313/: 67743100
testing-data/dummy-dat3/80704313/25175198/: 66645164
(+576 files in other folders)
