[package]
name = "bach-module-tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = "1.0.73"
proc-macro2 = "1.0.27"
bach-module = { path = "../bach-module" }
bach-bus = { path = "../bach-bus" }
[lib]
proc-macro = true
