[package]
name = "bach-module"
version = "0.1.1"
authors = ["Dorian VUOLO <dorian.vuolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bach-bus = { path = "../bach-bus" }
quick-xml =  { version = "0.22.0", features = ["serialize"] }
handlebars = "4.1.2"
