[package]
name = "bach-sync"
version = "0.1.0"
authors = ["Dorian VUOLO <dorian.vuolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
librsync = "0.2"
regex = "1.5"
pnet = "0.28.0"
ssh2 = "0.9"
json= "0.12.4"
rand = "0.8.3"
rayon = "1.5.1"
libc = "0.2.95"
libloading = "0.7.0"
serde = { version = "1.0.126", features = ["derive"] }
serde-xml-rs = "0.4.1"
quick-xml =  { version = "0.22.0", features = ["serialize"] }




