[package]
name = "bachd"
version = "0.1.1"
authors = ["Dorian VUOLO <dorian.vuolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8.3"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde-xml-rs = "0.4.1"
quick-xml =  { version = "0.22.0", features = ["serialize"] }
bach-module = { path = "../bach-module" }
bach-bus = { path = "../bach-bus" }
lazy_static = "1.4.0"
libloading = { version = "0.7.0", optional = true }
stdlogger = { path = "../modules/stdlogger", optional = true }
rsync = { path = "../modules/rsync", optional = true }
reporter = { path = "../modules/reporter", optional = true }

[features]
default = ["modular"]
modular = ["libloading"]
static = ["stdlogger", "rsync", "reporter"]
