[package]
name = "dummy"
version = "0.1.0"
authors = ["Dorian VUOLO <dorian.vuolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bach-module = { path = "../../bach-module" }
bach-bus = { path = "../../bach-bus" }
bach-module-tests = { path = "../../bach-module-tests" }

[lib]
crate-type = ["dylib", "lib"]
