[package]
name = "stdlogger"
version = "0.1.0"
authors = ["Dorian VUOLO <dorian.vuolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bach-module = { path = "../../bach-module" }
bach-bus = { path = "../../bach-bus" }
ansi_term = "0.12.1"
bach-module-tests = { path = "../../bach-module-tests" }
chrono = "0.4.19"

[lib]
crate-type = ["dylib", "lib"]
